(refactor) navbar alignment bug fix

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -28,6 +28,9 @@ body {
   cursor: pointer;
 }
 
+.btn-login {
+  background-color: #B6B2B2;
+}
 
 // injector
 @import 'account/login/login.less';
