--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -59,6 +59,7 @@
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   background: #4393B9;
+  border-top: 1px solid #D5D5D5;
 }
 
 #main .hero-unit .container {
