--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -3,9 +3,13 @@
 }
 
 
-#navbar .navbar-text, #navbar li a {
-  font-size: 19px;
+#navbar li a, #navbar .navbar-text, {
+  font-size: 17px;
   color: #f0f3f6;
+}
+
+.navbar {
+  border-bottom: none;
 }
 
 #navbar li a:hover {
